methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:11: error: not found: value fairev
fairev()
^