methods.picture.PictureMono1.scala.code
override def run() {
  def fairev() {
    avance(2)
    baisseBrosse();leveBrosse()
    avance();gauche()
    avance();baisseBrosse();leveBrosse()
    recule();droite()
    avance();baisseBrosse();leveBrosse()
  }
}
fairev()
